--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,1 +1,97 @@
 @import url('./reset.css');
+
+#datetime-picker {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  margin-top: 30px;
+  padding-left: 16px;
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+  margin-bottom: 32px;
+  outline: none;
+}
+.active-btn {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+  background: #4e75ff;
+  border-style: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  margin-left: 8px;
+  border-style: none;
+}
+
+.active-btn:hover {
+  background-color: #6c8cff;
+}
+
+.disabled-btn {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+  background: #cfcfcf;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #989898;
+  margin-left: 8px;
+  border-style: none;
+  cursor: auto;
+}
+.input-check {
+  border: 1px solid #808080;
+}
+
+.input-check:hover {
+  border: 1px solid #000;
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+}
+
+.input-check:active,
+:focus {
+  border: 1px solid #4e75ff;
+}
+
+.input-disabled {
+  border: 1px solid #808080;
+  color: #808080;
+}
+
+.timer {
+  display: flex;
+  gap: 24px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2e2f42;
+}
