--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -91,3 +91,72 @@
   line-height: 150%;
   color: #2e2f42;
 }
+
+.form {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form button:hover {
+  background: #6c8cff;
+}
+
+.form button {
+  margin-top: 24px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 360px;
+  height: 40px;
+  border: none;
+  background: #4e75ff;
+}
+
+fieldset {
+  max-width: 360px;
+  max-height: 64px;
+  padding: 24px 0px 8px 0px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+fieldset label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2e2f42;
+}
+
+input[name='delay'] {
+  outline: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  margin-top: 8px;
+  margin-bottom: 16px;
+  padding-left: 16px;
+  display: flex;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 344px;
+  height: 40px;
+}
+
+input[name='delay']:focus {
+  border: 1px solid #4e75ff;
+}
+input[name='delay']:hover {
+  border: 1px solid #000;
+}
